[gd_scene load_steps=4 format=3 uid="uid://qgwyy7crv0oe"]

[ext_resource type="Texture2D" uid="uid://58yl2bxusj5j" path="res://icon.svg" id="1_io6ud"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_iq11n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0q0i"]
size = Vector2(64, 64)

[node name="Player" type="CharacterBody2D"]
collision_mask = 23
script = ExtResource("1_iq11n")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_io6ud")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g0q0i")
metadata/_edit_lock_ = true

[node name="MarkerUp" type="Marker2D" parent="."]
position = Vector2(0, -48)

[node name="MarkerRight" type="Marker2D" parent="."]
position = Vector2(48, 0)
rotation = -3.14159

[node name="MarkerLeft" type="Marker2D" parent="."]
position = Vector2(-48, 0)
rotation = -1.5708

[node name="MarkerDown" type="Marker2D" parent="."]
position = Vector2(0, 48)
